--- a/demo/templates/demo/apartment_wizard.html
+++ b/demo/templates/demo/apartment_wizard.html
@@ -10,7 +10,8 @@
 {% load addcss %}
 {% load crispy_forms_tags %}
 {% block content %}
-<p>Step {{ wizard.steps.step1 }} of {{ wizard.steps.count }}</p>
+<div class="container">
+<h3>Step {{ wizard.steps.step1 }} of {{ wizard.steps.count }}</h3>
 <form action="" method="post">{% csrf_token %}
 <table>
 {{ wizard.management_form }}
@@ -24,14 +25,15 @@
 {% endif %}
 </table>
 {% if wizard.steps.prev %}
-<button name="wizard_goto_step" type="submit" class="btn btn-primary" value="{{ wizard.steps.first }}">{% trans "first step" %}</button>
-<button name="wizard_goto_step" type="submit" class="btn btn-primary" value="{{ wizard.steps.prev }}">{% trans "prev step" %}</button>
+<button name="wizard_goto_step" type="submit" class="btn btn-primary" value="{{ wizard.steps.first }}">{% trans "First" %}</button>
+<button name="wizard_goto_step" type="submit" class="btn btn-primary" value="{{ wizard.steps.prev }}">{% trans "Previous" %}</button>
 {% endif %}
 {% if wizard.steps.next %}
-<button name="next" type="submit" value="{% trans "submit" %}" class="btn btn-primary">{% trans "next step" %}</button>
+<button name="next" type="submit" value="{% trans "submit" %}" class="btn btn-primary">{% trans "Next" %}</button>
 {% else %}
-<input type="submit" value="Submit" class="btn btn-primary"/>
+<input type="submit" value="Complete" class="btn btn-primary"/>
 {% endif %}
 
 </form>
+</div>
 {% endblock %}
