Changed Add Apartments button to use new wizard

--- a/demo/templates/demo/homepage.html
+++ b/demo/templates/demo/homepage.html
@@ -10,7 +10,7 @@
 {% include "demo/embed/embed.html" %}
 </div>
 <div class="row">
-<div class="col-sm-3 col-offset-9"><button class="btn btn-primary" type="button" onclick="location.href='/apartments/create/'">  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add Apartment</button></div>
+<div class="col-sm-3 col-offset-9"><button class="btn btn-primary" type="button" onclick="location.href='/apartments/wizard/'">  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add Apartment</button></div>
 </div>
 </div>
 {% endblock %}
