--- a/demo/templates/demo/homepage.html
+++ b/demo/templates/demo/homepage.html
@@ -16,10 +16,10 @@
 <div class="col-sm-3 col-offset-9"><button class="btn btn-primary" type="button" onclick="location.href='/apartments/wizard/'">  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add Apartment</button></div>
 {% endif %}
 {% if request.user.is_authenticated and perms.demo.add_apartmentbuilding %}
-<div class="col-sm-3 col-offset-9"><button class="btn btn-primary" type="button" onclick="location.href='/apartments/wizard/'">  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add Apartment Building</button></div>
+<div class="col-sm-3 col-offset-9"><button class="btn btn-primary" type="button" onclick="location.href='/apartment_buildings/create/'">  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add Apartment Building</button></div>
 {% endif %}
 {% if request.user.is_authenticated and perms.demo.add_apartmentcontact %}
-<div class="col-sm-3 col-offset-9"><button class="btn btn-primary" type="button" onclick="location.href='/apartments/wizard/'">  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add Apartment Contact</button></div>
+<div class="col-sm-3 col-offset-9"><button class="btn btn-primary" type="button" onclick="location.href='/apartment_contacts/create/'">  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add Apartment Contact</button></div>
 {% endif %}
 </div>
 </div>
